src/css/components/_subtle-alert.scss
.subtleAlertOverlay {
    position          : fixed;
    top               : 0;
    left              : 0;
    right             : 0;
    bottom            : 0;
    background-color   : rgba(0, 0, 0, 0.5);
    width: $master-width;
    height: $master-height;
    margin: 25px;
    z-index:1001;
}

.subtleAlertModal {
    position: absolute;
    top: 20%;
    left: 50%;
    right: auto;
    bottom: auto;
    margin-right: -50%;
    @include transform(translate(-50%, -50%));
    border: 1px solid #ccc;
    overflow: auto;
    -webkit-overflow-scrolling: 'touch';
    border-radius: 4px;
    outline: none;
    padding: 20px;
    width: 80%;
}

.subtleAlert{
    height: 100%;
    @include display(flex);
    @include flex-direction(row);
    align-items: center;
}

.subtleAlert-text {
    flex: 14;
    display: flex;
    flex-direction: column;
    padding: 10px 10px;
    max-height: calc((#{$master-height} - 75px) / 5);

    h4 {
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 100%;
        line-height: 1.5em;
        height: 1.5em;
        //max-width: calc(#{$master-width} * 0.55);
    }

    p {
        overflow: hidden;
        word-wrap: normal;
        line-height: 1em;
        height: 2em;
        max-width: 100%;
        //max-width: calc(#{$master-width} * 0.55);
    }
}

.subtleAlert-icon{
    height: calc((#{$master-height} - 75px) / 5);
    width: calc((#{$master-height} - 75px) / 5);
    @include display(flex);
    @include justify-content(center);
    @include align-items(center);
    .icon{
        max-height:75%;
        max-width: 75%;
        height: auto;
        width: auto;
    }
    #Layer_1 {
        max-height:75%;
        max-width: 75%;
        height: auto;
        width: 75%;
    }
}

.h-subtleAlert-buttons{
    @include display(flex);
    @include justify-content(space-around);
    @include flex-direction(row);
    @include align-items(center);
}

.v-subtleAlert-buttons{
    @include display(flex);
    @include justify-content(space-around);
    @include flex-direction(column);
    @include align-items(center);
    flex: 10;
    max-height: calc((#{$master-height} - 75px) / 5);
}

.h-subtleAlert-button-1 {
    height: 100px;
    width: 100px;
    text-align: center;
    border-radius: 8px;
    border-width: 0.154px;
    border-style: solid;
    margin: 15px;
    //align-self: flex-start;

    @include display(flex);
    @include align-items(center);
    @include justify-content(center);
}

.h-subtleAlert-button-2 {
    height: 100px;
    width: 100px;
    text-align: center;
    border-radius: 8px;
    border-width: 0.154px;
    border-style: solid;
    margin: 15px;

    @include display(flex);
    @include align-items(center);
    @include justify-content(center);
} 

.v-subtleAlert-button-1 {
    height: 60%;
    width: 100%;
    text-align: center;
    border-radius: 8px;
    border-width: 0.154px;
    border-style: solid;
    margin: 4px 0px;

    @include display(flex);
    @include flex-direction(row-reverse);
    @include align-items(center);
    @include justify-content(center);

    .soft-button-image-static {
        max-height: 37.5px;
        max-width: 100%;
        min-width: 37.5px;

        div svg {
            max-height: 37.5px;
        }
    }

    p {
        overflow: hidden;
        display: -webkit-box;
        -webkit-line-clamp: 1;
        -webkit-box-orient: vertical;
    }
}

.v-subtleAlert-button-2 {
    height: 40%;
    width: 100%;
    text-align: center;
    border-radius: 8px;
    border-width: 0.154px;
    border-style: solid;
    margin: 4px 0px;

    @include display(flex);
    @include flex-direction(row-reverse);
    @include align-items(center);
    @include justify-content(center);

    .soft-button-image-static {
        max-height: 37.5px;
        max-width: 100%;
        min-width: 37.5px;

        div svg {
            max-height: 37.5px;
        }
    }

    p {
        overflow: hidden;
        display: -webkit-box;
        -webkit-line-clamp: 1;
        -webkit-box-orient: vertical;
    }
}

